--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup-db": "node scripts/setup-database.js",
+    "setup-mongodb": "node scripts/setup-mongodb-env.js",
+    "seed-database": "node scripts/seed-database.js"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
@@ -35,15 +38,22 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.17.0",
     "input-otp": "^1.4.2",
+    "jose": "^6.0.11",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.514.0",
+    "mongodb": "^6.17.0",
     "next": "15.3.3",
+    "next-connect": "^1.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
@@ -54,6 +64,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "timers-browserify": "^2.0.12",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
