--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "seed-database": "node scripts/seed-database.js"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
